# AlphaAgent

./: .gitignore  README.md  app.py  crew.py  crewai_explorations.ipynb  crewai_test.py  index.html  main.py  prompts.py  pyproject.toml
agents/: __init__.py  base_agent.py  fundamental_agent.py  sentiment_agent.py  valuation_agent.py
assets/: INDAS_117298_1348254_16012025082021 (2).xml  Quote-Equity-RELIANCE-EQ-08-09-2024-to-08-09-2025.csv
config/: agents.yaml  tasks.yaml
notebooks/: autogen_explorations.ipynb  exploration.ipynb
